--- a/index.html
+++ b/index.html
@@ -17,10 +17,44 @@
     <meta property="og:description" content="Personal Blog"/>
 
     <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/style.css">
+    <link href="https://fonts.googleapis.com/css?family=Playfair+Display" rel="stylesheet">
 
   </head>
-  <body>
+  <body class="container"> 
 
+    <!-- NAVBAR START -->
+    <nav class="navbar navbar-expand-lg navbar-light">
+            <a class="navbar-brand" href="#"><b>MINIMØ</b></a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+          
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+              <ul class="navbar-nav ml-auto">
+                <li class="nav-item active">
+                  <a class="nav-link" href="#">LIFESTYLE <span class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#">PHOTODIARY</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">MUSIC</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">TRAVEL</a>
+                </li>
+              </ul>
+            </div>
+    </nav>
+
+    <!-- NAVBAR END-->
+
+    <!-- START MAIN BLOG POST-->
+    <div>
+        <img class="responsive" src="images/photodiary_1.jpg" />
+    </div>
+    <!-- END MAIN BLOG POST-->
 
     
     <script src="js/jquery-3.3.1.min.js"></script>
