--- a/index.html
+++ b/index.html
@@ -17,8 +17,11 @@
     <meta property="og:description" content="Personal Blog"/>
 
     <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/all.css">
     <link rel="stylesheet" href="css/style.css">
     <link href="https://fonts.googleapis.com/css?family=Playfair+Display" rel="stylesheet">
+
+    <script src="js/all.js"></script>
 
   </head>
   <body class="container"> 
@@ -51,14 +54,119 @@
     <!-- NAVBAR END-->
 
     <!-- START MAIN BLOG POST-->
-    <div>
-        <img class="responsive" src="images/photodiary_1.jpg" />
+    <div id="slider">
+        <img src="images/photodiary_1.jpg" />
+        <!--label>THEME</label>
+        <h1>Heeader 1</h1>
+        <p>Default text</p>
+        <input name="Name" value="LEAVE A COMMENT" /-->
     </div>
     <!-- END MAIN BLOG POST-->
 
+
+    <!--START 4 POSTS-->
+    <div class="row">
+
+        <div class="col-md-12 col-lg-12 col-xs-12 four-posts">
+            <label>THEME</label>
+            <h1>Heeader 1</h1>
+            <p>Default text</p>
+            <input name="Name" value="LEAVE A COMMENT" />
+        </div>
+
+      <div class="col-md-6 col-lg-6 col-xs-6 four-posts">
+          <img src="images/photodiary_1.jpg" />
+          <label>THEME</label>
+          <h1>Heeader 1</h1>
+          <p>Default text</p>
+          <input name="Name" value="LEAVE A COMMENT" />
+      </div>
+
+      <div class="col-md-6 col-lg-6 col-xs-6 four-posts">
+          <img src="images/photodiary_1.jpg" />
+          <label>THEME</label>
+          <h1>Heeader 1</h1>
+          <p>Default text</p>
+          <input name="Name" value="LEAVE A COMMENT" />
+      </div>
+
+      <div class="col-md-6 col-lg-6 col-xs-6 four-posts">
+          <img src="images/photodiary_1.jpg" />
+          <label>THEME</label>
+          <h1>Heeader 1</h1>
+          <p>Default text</p>
+          <input name="Name" value="LEAVE A COMMENT" />
+      </div>
+
+      <div class="col-md-6 col-lg-6 col-xs-6 four-posts">
+          <img src="images/photodiary_1.jpg" />
+          <label>THEME</label>
+          <h1>Heeader 1</h1>
+          <p>Default text</p>
+          <input name="Name" value="LEAVE A COMMENT" />
+       </div>
+    </div>
+
+    <!--END 4 POSTS-->
+
+    <!--START NEWSLETTER-->
+    <div class="row newsletter">
+        <div class="col-md-12 col-lg-12 col-xs-12">
+            <h1 class="newsletter-header">Sign up for newsletter</h1>
+        </div>
+
+        <div class="input-group mb-3 col-md-4 offset-md-4 offset-lg-4 offset-sm-4 email-field">
+            <input type="text" class="form-control" placeholder="Enter a valid email address" aria-label="Recipient's username" aria-describedby="basic-addon2">
+            <div class="input-group-append">
+              <span class="input-group-text" id="basic-addon2">  <i class="fas fa-paper-plane"></i></span>
+            </div>
+          </div>  
+    </div>
+    <!--END NEWSLETTER-->
+
+  <!--START 2 POSTS-->
+  <div class="row two-posts">
+      <div class="col-md-6 col-lg-6 col-xs-6 four-posts">
+          <img src="images/photodiary_1.jpg" />
+          <label>THEME</label>
+          <h1>Heeader 1</h1>
+          <p>Default text</p>
+          <input name="Name" value="LEAVE A COMMENT" />
+      </div>
+
+      <div class="col-md-6 col-lg-6 col-xs-6 four-posts">
+          <img src="images/photodiary_1.jpg" />
+          <label>THEME</label>
+          <h1>Heeader 1</h1>
+          <p>Default text</p>
+          <input name="Name" value="LEAVE A COMMENT" />
+      </div>
+  </div>
+  <!--END 2 POSTS-->
+
+  <div class="row">
+    <div class="col-sm-4 offset-sm-5">
+      <button class="btn btn-light btn-lg load-more-button">Load more</button>
+    </div>
+  </div>
+
+
+  <div class="row" id="footer">
+    <div class="col-sm-6">
+      <a href="#">Terms and Conditions</a> 
+      <a href="#">Privacy</a>
+    </div>
+    <div class="col-sm-2 offset-sm-4">  
+      <label>Follow us</label>
+      <a href="#"><i class="fab fa-facebook-f"></i></a>
+      <a href="#"><i class="fab fa-twitter"></i></a>
+      <a href="#"><i class="fab fa-instagram"></i></a>
+    </div>
+  </div>
     
     <script src="js/jquery-3.3.1.min.js"></script>
     <script src="js/popper.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
+    
   </body>
 </html>
