--- a/index.html
+++ b/index.html
@@ -56,10 +56,6 @@
     <!-- START MAIN BLOG POST-->
     <div id="slider">
         <img src="images/photodiary_1.jpg" />
-        <!--label>THEME</label>
-        <h1>Heeader 1</h1>
-        <p>Default text</p>
-        <input name="Name" value="LEAVE A COMMENT" /-->
     </div>
     <!-- END MAIN BLOG POST-->
 
@@ -68,41 +64,51 @@
     <div class="row">
 
         <div class="col-md-12 col-lg-12 col-xs-12 four-posts">
-            <label>THEME</label>
-            <h1>Heeader 1</h1>
-            <p>Default text</p>
+            <label>PHOTODIARY</label>
+            <h2>The perfect weekend getaway</h2>
+            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+               Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and 
+               scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</p>
             <input name="Name" value="LEAVE A COMMENT" />
         </div>
 
       <div class="col-md-6 col-lg-6 col-xs-6 four-posts">
           <img src="images/photodiary_1.jpg" />
-          <label>THEME</label>
-          <h1>Heeader 1</h1>
-          <p>Default text</p>
+          <label>LIFESTYLE</label>
+          <h2>More than just music festival</h2>
+          <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+             Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and 
+             scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</p>
           <input name="Name" value="LEAVE A COMMENT" />
       </div>
 
       <div class="col-md-6 col-lg-6 col-xs-6 four-posts">
           <img src="images/photodiary_1.jpg" />
-          <label>THEME</label>
-          <h1>Heeader 1</h1>
-          <p>Default text</p>
+          <label>LIFESTYLE</label>
+          <h2>Life tastes better with coffee</h2>
+          <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+             Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type 
+              scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</p>
           <input name="Name" value="LEAVE A COMMENT" />
       </div>
 
       <div class="col-md-6 col-lg-6 col-xs-6 four-posts">
           <img src="images/photodiary_1.jpg" />
-          <label>THEME</label>
-          <h1>Heeader 1</h1>
-          <p>Default text</p>
+          <label>PHOTODIARY</label>
+          <h2>American dream</h2>
+          <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
+            Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and 
+            scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</p>
           <input name="Name" value="LEAVE A COMMENT" />
       </div>
 
       <div class="col-md-6 col-lg-6 col-xs-6 four-posts">
           <img src="images/photodiary_1.jpg" />
-          <label>THEME</label>
-          <h1>Heeader 1</h1>
-          <p>Default text</p>
+          <label>PHOTODIARY</label>
+          <h2>A day exploring the Alps</h2>
+          <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+             Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and 
+             scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</p>
           <input name="Name" value="LEAVE A COMMENT" />
        </div>
     </div>
@@ -128,17 +134,21 @@
   <div class="row two-posts">
       <div class="col-md-6 col-lg-6 col-xs-6 four-posts">
           <img src="images/photodiary_1.jpg" />
-          <label>THEME</label>
-          <h1>Heeader 1</h1>
-          <p>Default text</p>
+          <label>LIFESTYLE</label>
+          <h2>Top 10 song for running</h2>
+          <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
+            Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and 
+            scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</p>
           <input name="Name" value="LEAVE A COMMENT" />
       </div>
 
       <div class="col-md-6 col-lg-6 col-xs-6 four-posts">
           <img src="images/photodiary_1.jpg" />
-          <label>THEME</label>
-          <h1>Heeader 1</h1>
-          <p>Default text</p>
+          <label>LIFESTYLE</label>
+          <h2>Cold winter days</h2>
+          <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+             Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and
+              scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</p>
           <input name="Name" value="LEAVE A COMMENT" />
       </div>
   </div>
